pddl/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DURATIVE_ACTION_KEY

Grammar

Rule 0     S' -> structs
Rule 1     structs -> domain
Rule 2     structs -> problem
Rule 3     structs -> operator_def
Rule 4     structs -> literal
Rule 5     structs -> constants_lst
Rule 6     structs -> variables_lst
Rule 7     problem -> LPAREN DEFINE_KEY problem_def domain_def member_dict RPAREN
Rule 8     domain_def -> LPAREN DOMAIN_KEY NAME RPAREN
Rule 9     problem_def -> LPAREN PROBLEM_KEY NAME RPAREN
Rule 10    objects_def -> LPAREN OBJECTS_KEY typed_constants_lst RPAREN
Rule 11    objects_def -> LPAREN OBJECTS_KEY RPAREN
Rule 12    init_def -> LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 13    init_def -> LPAREN INIT_KEY ground_predicates_lst RPAREN
Rule 14    init_def -> LPAREN INIT_KEY RPAREN
Rule 15    goal_def -> LPAREN GOAL_KEY LPAREN AND_KEY literals_lst RPAREN RPAREN
Rule 16    goal_def -> LPAREN GOAL_KEY literal RPAREN
Rule 17    goal_def -> LPAREN GOAL_KEY RPAREN
Rule 18    ground_predicates_lst -> ground_predicate ground_predicates_lst
Rule 19    ground_predicates_lst -> ground_predicate
Rule 20    ground_predicate -> LPAREN NAME constants_lst RPAREN
Rule 21    ground_predicate -> LPAREN NAME RPAREN
Rule 22    ground_predicate -> LPAREN EQUALS simple_predicate NUMBER RPAREN
Rule 23    metric_obj -> LPAREN METRIC_KEY metric_minmax simple_predicate RPAREN
Rule 24    metric_minmax -> MINIMIZE_KEY
Rule 25    metric_minmax -> MAXIMIZE_KEY
Rule 26    domain -> LPAREN DEFINE_KEY domain_def member_dict RPAREN
Rule 27    member_dict -> member member_dict
Rule 28    member_dict -> member
Rule 29    member -> types_def
Rule 30    member -> constants_def
Rule 31    member -> require_def
Rule 32    member -> predicates_def
Rule 33    member -> operators_def
Rule 34    member -> functions_def
Rule 35    member -> objects_def
Rule 36    member -> init_def
Rule 37    member -> goal_def
Rule 38    member -> metric_obj
Rule 39    functions_def -> LPAREN FUNCTIONS_KEY function_def_lst RPAREN
Rule 40    functions_def -> LPAREN FUNCTIONS_KEY RPAREN
Rule 41    function_def_lst -> function_def function_def_lst
Rule 42    function_def_lst -> function_def
Rule 43    function_def -> LPAREN NAME typed_variables_lst RPAREN
Rule 44    function_def -> LPAREN NAME typed_variables_lst RPAREN HYPHEN NUMBER_KEY
Rule 45    function_def -> LPAREN NAME RPAREN
Rule 46    function_def -> LPAREN NAME RPAREN HYPHEN NUMBER_KEY
Rule 47    require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
Rule 48    require_key_lst -> require_key require_key_lst
Rule 49    require_key_lst -> require_key
Rule 50    require_key -> STRIPS_KEY
Rule 51    require_key -> EQUALITY_KEY
Rule 52    require_key -> TYPING_KEY
Rule 53    require_key -> DURATIVE_ACTIONS_KEY
Rule 54    require_key -> NEGATIVE_PRECONDITIONS_KEY
Rule 55    require_key -> DISJ_PRECONDITIONS_KEY
Rule 56    require_key -> CONDITIONAL_EFFECTS_KEY
Rule 57    require_key -> ACTION_COSTS_KEY
Rule 58    require_key -> ADL_KEY
Rule 59    require_key -> FLUENTS_KEY
Rule 60    types_def -> LPAREN TYPES_KEY typed_constants_lst RPAREN
Rule 61    types_def -> LPAREN TYPES_KEY RPAREN
Rule 62    constants_def -> LPAREN CONSTANTS_KEY typed_constants_lst RPAREN
Rule 63    constants_def -> LPAREN CONSTANTS_KEY RPAREN
Rule 64    predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN
Rule 65    predicates_def -> LPAREN PREDICATES_KEY RPAREN
Rule 66    operators_def -> operator_def_lst
Rule 67    operator_def_lst -> operator_def operator_def_lst
Rule 68    operator_def_lst -> operator_def
Rule 69    operator_def -> strips_action_def
Rule 70    predicate_def_lst -> predicate_def predicate_def_lst
Rule 71    predicate_def_lst -> predicate_def
Rule 72    strips_action_def -> LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN
Rule 73    predicate_def -> LPAREN NAME typed_variables_lst RPAREN
Rule 74    predicate_def -> LPAREN NAME RPAREN
Rule 75    parameters_def -> PARAMETERS_KEY LPAREN typed_variables_lst RPAREN
Rule 76    parameters_def -> PARAMETERS_KEY LPAREN RPAREN
Rule 77    duration_def -> DURATION_KEY LPAREN EQUALS VARIABLE NUMBER RPAREN
Rule 78    durative_condition_def -> CONDITION_KEY LPAREN AND_KEY durative_condition_literals_lst RPAREN
Rule 79    durative_condition_def -> CONDITION_KEY durative_condition_literal
Rule 80    durative_condition_literals_lst -> durative_condition_literal durative_condition_literals_lst
Rule 81    durative_condition_literals_lst -> durative_condition_literal
Rule 82    durative_condition_literal -> LPAREN NAME NAME literal RPAREN
Rule 83    action_def_body -> precond_def effects_def
Rule 84    precond_def -> PRECONDITION_KEY LPAREN AND_KEY literals_lst RPAREN
Rule 85    precond_def -> PRECONDITION_KEY LPAREN RPAREN
Rule 86    precond_def -> PRECONDITION_KEY LPAREN AND_KEY RPAREN
Rule 87    precond_def -> PRECONDITION_KEY literal
Rule 88    effects_def -> EFFECT_KEY LPAREN AND_KEY effects_lst RPAREN
Rule 89    effects_def -> EFFECT_KEY LPAREN RPAREN
Rule 90    effects_def -> EFFECT_KEY LPAREN AND_KEY RPAREN
Rule 91    effects_def -> EFFECT_KEY effect
Rule 92    effects_lst -> effect effects_lst
Rule 93    effects_lst -> effect
Rule 94    effect -> literal
Rule 95    literals_lst -> literal literals_lst
Rule 96    literals_lst -> literal
Rule 97    literal -> LPAREN NOT_KEY predicate RPAREN
Rule 98    literal -> predicate
Rule 99    when -> LPAREN NAME literals_lst RPAREN
Rule 100   when -> literal
Rule 101   simple_predicate -> LPAREN NAME variables_lst RPAREN
Rule 102   simple_predicate -> LPAREN NAME RPAREN
Rule 103   predicate -> simple_predicate
Rule 104   predicate -> LPAREN AND_KEY literals_lst RPAREN
Rule 105   predicate -> LPAREN OR_KEY literals_lst RPAREN
Rule 106   predicate -> LPAREN EQUALS VARIABLE VARIABLE RPAREN
Rule 107   predicate -> LPAREN EQUALS VARIABLE constant RPAREN
Rule 108   predicate -> LPAREN EQUALS constant VARIABLE RPAREN
Rule 109   predicate -> LPAREN WHEN_KEY when when RPAREN
Rule 110   predicate -> LPAREN NAME RPAREN
Rule 111   predicate -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN literal RPAREN
Rule 112   predicate -> NUMBER
Rule 113   predicate -> numeric_op
Rule 114   numeric_op -> LPAREN numberic_op_name simple_predicate simple_predicate RPAREN
Rule 115   numeric_op -> LPAREN numberic_op_name simple_predicate NUMBER RPAREN
Rule 116   numberic_op_name -> ASSIGN_KEY
Rule 117   numberic_op_name -> INCREASE_KEY
Rule 118   numberic_op_name -> DECREASE_KEY
Rule 119   numberic_op_name -> LEQ_KEY
Rule 120   numberic_op_name -> GEQ_KEY
Rule 121   numberic_op_name -> PLUS_KEY
Rule 122   numberic_op_name -> MINUS_KEY
Rule 123   numberic_op_name -> EQUALS
Rule 124   typed_constants_lst -> constants_lst HYPHEN type typed_constants_lst
Rule 125   typed_constants_lst -> constants_lst HYPHEN type
Rule 126   typed_constants_lst -> constants_lst
Rule 127   typed_variables_lst -> variables_lst HYPHEN type typed_variables_lst
Rule 128   typed_variables_lst -> variables_lst HYPHEN type
Rule 129   typed_variables_lst -> variables_lst
Rule 130   constants_lst -> constant constants_lst
Rule 131   constants_lst -> constant
Rule 132   variables_lst -> VARIABLE variables_lst
Rule 133   variables_lst -> VARIABLE
Rule 134   variables_lst -> NAME variables_lst
Rule 135   variables_lst -> NAME
Rule 136   type -> NAME
Rule 137   constant -> NAME

Terminals, with rules where they appear

ACTION_COSTS_KEY     : 57
ACTION_KEY           : 72
ADL_KEY              : 58
AND_KEY              : 12 15 78 84 86 88 90 104
ASSIGN_KEY           : 116
CONDITIONAL_EFFECTS_KEY : 56
CONDITION_KEY        : 78 79
CONSTANTS_KEY        : 62 63
DECREASE_KEY         : 118
DEFINE_KEY           : 7 26
DISJ_PRECONDITIONS_KEY : 55
DOMAIN_KEY           : 8
DURATION_KEY         : 77
DURATIVE_ACTIONS_KEY : 53
DURATIVE_ACTION_KEY  : 
EFFECT_KEY           : 88 89 90 91
EQUALITY_KEY         : 51
EQUALS               : 22 77 106 107 108 123
FLUENTS_KEY          : 59
FORALL_KEY           : 111
FUNCTIONS_KEY        : 39 40
GEQ_KEY              : 120
GOAL_KEY             : 15 16 17
HYPHEN               : 44 46 124 125 127 128
INCREASE_KEY         : 117
INIT_KEY             : 12 13 14
LEQ_KEY              : 119
LPAREN               : 7 8 9 10 11 12 12 13 14 15 15 16 17 20 21 22 23 26 39 40 43 44 45 46 47 60 61 62 63 64 65 72 73 74 75 76 77 78 82 84 85 86 88 89 90 97 99 101 102 104 105 106 107 108 109 110 111 111 114 115
MAXIMIZE_KEY         : 25
METRIC_KEY           : 23
MINIMIZE_KEY         : 24
MINUS_KEY            : 122
NAME                 : 8 9 20 21 43 44 45 46 72 73 74 82 82 99 101 102 110 134 135 136 137
NEGATIVE_PRECONDITIONS_KEY : 54
NOT_KEY              : 97
NUMBER               : 22 77 112 115
NUMBER_KEY           : 44 46
OBJECTS_KEY          : 10 11
OR_KEY               : 105
PARAMETERS_KEY       : 75 76
PLUS_KEY             : 121
PRECONDITION_KEY     : 84 85 86 87
PREDICATES_KEY       : 64 65
PROBLEM_KEY          : 9
REQUIREMENTS_KEY     : 47
RPAREN               : 7 8 9 10 11 12 12 13 14 15 15 16 17 20 21 22 23 26 39 40 43 44 45 46 47 60 61 62 63 64 65 72 73 74 75 76 77 78 82 84 85 86 88 89 90 97 99 101 102 104 105 106 107 108 109 110 111 111 114 115
STRIPS_KEY           : 50
TYPES_KEY            : 60 61
TYPING_KEY           : 52
VARIABLE             : 77 106 106 107 108 132 133
WHEN_KEY             : 109
error                : 

Nonterminals, with rules where they appear

action_def_body      : 72
constant             : 107 108 130 131
constants_def        : 30
constants_lst        : 5 20 124 125 126 130
domain               : 1
domain_def           : 7 26
duration_def         : 
durative_condition_def : 
durative_condition_literal : 79 80 81
durative_condition_literals_lst : 78 80
effect               : 91 92 93
effects_def          : 83
effects_lst          : 88 92
function_def         : 41 42
function_def_lst     : 39 41
functions_def        : 34
goal_def             : 37
ground_predicate     : 18 19
ground_predicates_lst : 12 13 18
init_def             : 36
literal              : 4 16 82 87 94 95 96 100 111
literals_lst         : 15 84 95 99 104 105
member               : 27 28
member_dict          : 7 26 27
metric_minmax        : 23
metric_obj           : 38
numberic_op_name     : 114 115
numeric_op           : 113
objects_def          : 35
operator_def         : 3 67 68
operator_def_lst     : 66 67
operators_def        : 33
parameters_def       : 72
precond_def          : 83
predicate            : 97 98
predicate_def        : 70 71
predicate_def_lst    : 64 70
predicates_def       : 32
problem              : 2
problem_def          : 7
require_def          : 31
require_key          : 48 49
require_key_lst      : 47 48
simple_predicate     : 22 23 103 114 114 115
strips_action_def    : 69
structs              : 0
type                 : 124 125 127 128
typed_constants_lst  : 10 60 62 124
typed_variables_lst  : 43 44 73 75 111 127
types_def            : 29
variables_lst        : 6 101 127 128 129 132 134
when                 : 109 109

Parsing method: LALR

state 0

    (0) S' -> . structs
    (1) structs -> . domain
    (2) structs -> . problem
    (3) structs -> . operator_def
    (4) structs -> . literal
    (5) structs -> . constants_lst
    (6) structs -> . variables_lst
    (26) domain -> . LPAREN DEFINE_KEY domain_def member_dict RPAREN
    (7) problem -> . LPAREN DEFINE_KEY problem_def domain_def member_dict RPAREN
    (69) operator_def -> . strips_action_def
    (97) literal -> . LPAREN NOT_KEY predicate RPAREN
    (98) literal -> . predicate
    (130) constants_lst -> . constant constants_lst
    (131) constants_lst -> . constant
    (132) variables_lst -> . VARIABLE variables_lst
    (133) variables_lst -> . VARIABLE
    (134) variables_lst -> . NAME variables_lst
    (135) variables_lst -> . NAME
    (72) strips_action_def -> . LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN
    (103) predicate -> . simple_predicate
    (104) predicate -> . LPAREN AND_KEY literals_lst RPAREN
    (105) predicate -> . LPAREN OR_KEY literals_lst RPAREN
    (106) predicate -> . LPAREN EQUALS VARIABLE VARIABLE RPAREN
    (107) predicate -> . LPAREN EQUALS VARIABLE constant RPAREN
    (108) predicate -> . LPAREN EQUALS constant VARIABLE RPAREN
    (109) predicate -> . LPAREN WHEN_KEY when when RPAREN
    (110) predicate -> . LPAREN NAME RPAREN
    (111) predicate -> . LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN literal RPAREN
    (112) predicate -> . NUMBER
    (113) predicate -> . numeric_op
    (137) constant -> . NAME
    (101) simple_predicate -> . LPAREN NAME variables_lst RPAREN
    (102) simple_predicate -> . LPAREN NAME RPAREN
    (114) numeric_op -> . LPAREN numberic_op_name simple_predicate simple_predicate RPAREN
    (115) numeric_op -> . LPAREN numberic_op_name simple_predicate NUMBER RPAREN

    LPAREN          shift and go to state 8
    VARIABLE        shift and go to state 12
    NAME            shift and go to state 13
    NUMBER          shift and go to state 15

    structs                        shift and go to state 1
    domain                         shift and go to state 2
    problem                        shift and go to state 3
    operator_def                   shift and go to state 4
    literal                        shift and go to state 5
    constants_lst                  shift and go to state 6
    variables_lst                  shift and go to state 7
    strips_action_def              shift and go to state 9
    predicate                      shift and go to state 10
    constant                       shift and go to state 11
    simple_predicate               shift and go to state 14
    numeric_op                     shift and go to state 16

state 1

    (0) S' -> structs .



state 2

    (1) structs -> domain .

    $end            reduce using rule 1 (structs -> domain .)


state 3

    (2) structs -> problem .

    $end            reduce using rule 2 (structs -> problem .)


state 4

    (3) structs -> operator_def .

    $end            reduce using rule 3 (structs -> operator_def .)


state 5

    (4) structs -> literal .

    $end            reduce using rule 4 (structs -> literal .)


state 6

    (5) structs -> constants_lst .

    $end            reduce using rule 5 (structs -> constants_lst .)


state 7

    (6) structs -> variables_lst .

    $end            reduce using rule 6 (structs -> variables_lst .)


state 8

    (26) domain -> LPAREN . DEFINE_KEY domain_def member_dict RPAREN
    (7) problem -> LPAREN . DEFINE_KEY problem_def domain_def member_dict RPAREN
    (97) literal -> LPAREN . NOT_KEY predicate RPAREN
    (72) strips_action_def -> LPAREN . ACTION_KEY NAME parameters_def action_def_body RPAREN
    (104) predicate -> LPAREN . AND_KEY literals_lst RPAREN
    (105) predicate -> LPAREN . OR_KEY literals_lst RPAREN
    (106) predicate -> LPAREN . EQUALS VARIABLE VARIABLE RPAREN
    (107) predicate -> LPAREN . EQUALS VARIABLE constant RPAREN
    (108) predicate -> LPAREN . EQUALS constant VARIABLE RPAREN
    (109) predicate -> LPAREN . WHEN_KEY when when RPAREN
    (110) predicate -> LPAREN . NAME RPAREN
    (111) predicate -> LPAREN . FORALL_KEY LPAREN typed_variables_lst RPAREN literal RPAREN
    (101) simple_predicate -> LPAREN . NAME variables_lst RPAREN
    (102) simple_predicate -> LPAREN . NAME RPAREN
    (114) numeric_op -> LPAREN . numberic_op_name simple_predicate simple_predicate RPAREN
    (115) numeric_op -> LPAREN . numberic_op_name simple_predicate NUMBER RPAREN
    (116) numberic_op_name -> . ASSIGN_KEY
    (117) numberic_op_name -> . INCREASE_KEY
    (118) numberic_op_name -> . DECREASE_KEY
    (119) numberic_op_name -> . LEQ_KEY
    (120) numberic_op_name -> . GEQ_KEY
    (121) numberic_op_name -> . PLUS_KEY
    (122) numberic_op_name -> . MINUS_KEY
    (123) numberic_op_name -> . EQUALS

    DEFINE_KEY      shift and go to state 17
    NOT_KEY         shift and go to state 18
    ACTION_KEY      shift and go to state 19
    AND_KEY         shift and go to state 21
    OR_KEY          shift and go to state 22
    EQUALS          shift and go to state 23
    WHEN_KEY        shift and go to state 24
    NAME            shift and go to state 20
    FORALL_KEY      shift and go to state 25
    ASSIGN_KEY      shift and go to state 27
    INCREASE_KEY    shift and go to state 28
    DECREASE_KEY    shift and go to state 29
    LEQ_KEY         shift and go to state 30
    GEQ_KEY         shift and go to state 31
    PLUS_KEY        shift and go to state 32
    MINUS_KEY       shift and go to state 33

    numberic_op_name               shift and go to state 26

state 9

    (69) operator_def -> strips_action_def .

    $end            reduce using rule 69 (operator_def -> strips_action_def .)
    LPAREN          reduce using rule 69 (operator_def -> strips_action_def .)
    RPAREN          reduce using rule 69 (operator_def -> strips_action_def .)


state 10

    (98) literal -> predicate .

    $end            reduce using rule 98 (literal -> predicate .)
    LPAREN          reduce using rule 98 (literal -> predicate .)
    NUMBER          reduce using rule 98 (literal -> predicate .)
    RPAREN          reduce using rule 98 (literal -> predicate .)
    EFFECT_KEY      reduce using rule 98 (literal -> predicate .)


state 11

    (130) constants_lst -> constant . constants_lst
    (131) constants_lst -> constant .
    (130) constants_lst -> . constant constants_lst
    (131) constants_lst -> . constant
    (137) constant -> . NAME

    $end            reduce using rule 131 (constants_lst -> constant .)
    HYPHEN          reduce using rule 131 (constants_lst -> constant .)
    RPAREN          reduce using rule 131 (constants_lst -> constant .)
    NAME            shift and go to state 35

    constant                       shift and go to state 11
    constants_lst                  shift and go to state 34

state 12

    (132) variables_lst -> VARIABLE . variables_lst
    (133) variables_lst -> VARIABLE .
    (132) variables_lst -> . VARIABLE variables_lst
    (133) variables_lst -> . VARIABLE
    (134) variables_lst -> . NAME variables_lst
    (135) variables_lst -> . NAME

    $end            reduce using rule 133 (variables_lst -> VARIABLE .)
    RPAREN          reduce using rule 133 (variables_lst -> VARIABLE .)
    HYPHEN          reduce using rule 133 (variables_lst -> VARIABLE .)
    VARIABLE        shift and go to state 12
    NAME            shift and go to state 37

    variables_lst                  shift and go to state 36

state 13

    (134) variables_lst -> NAME . variables_lst
    (135) variables_lst -> NAME .
    (137) constant -> NAME .
    (132) variables_lst -> . VARIABLE variables_lst
    (133) variables_lst -> . VARIABLE
    (134) variables_lst -> . NAME variables_lst
    (135) variables_lst -> . NAME

  ! reduce/reduce conflict for $end resolved using rule 135 (variables_lst -> NAME .)
  ! shift/reduce conflict for NAME resolved as shift
    $end            reduce using rule 135 (variables_lst -> NAME .)
    VARIABLE        shift and go to state 12
    NAME            shift and go to state 37

  ! NAME            [ reduce using rule 137 (constant -> NAME .) ]
  ! $end            [ reduce using rule 137 (constant -> NAME .) ]

    variables_lst                  shift and go to state 38

state 14

    (103) predicate -> simple_predicate .

    $end            reduce using rule 103 (predicate -> simple_predicate .)
    RPAREN          reduce using rule 103 (predicate -> simple_predicate .)
    LPAREN          reduce using rule 103 (predicate -> simple_predicate .)
    NUMBER          reduce using rule 103 (predicate -> simple_predicate .)
    EFFECT_KEY      reduce using rule 103 (predicate -> simple_predicate .)


state 15

    (112) predicate -> NUMBER .

    $end            reduce using rule 112 (predicate -> NUMBER .)
    RPAREN          reduce using rule 112 (predicate -> NUMBER .)
    LPAREN          reduce using rule 112 (predicate -> NUMBER .)
    NUMBER          reduce using rule 112 (predicate -> NUMBER .)
    EFFECT_KEY      reduce using rule 112 (predicate -> NUMBER .)


state 16

    (113) predicate -> numeric_op .

    $end            reduce using rule 113 (predicate -> numeric_op .)
    RPAREN          reduce using rule 113 (predicate -> numeric_op .)
    LPAREN          reduce using rule 113 (predicate -> numeric_op .)
    NUMBER          reduce using rule 113 (predicate -> numeric_op .)
    EFFECT_KEY      reduce using rule 113 (predicate -> numeric_op .)


state 17

    (26) domain -> LPAREN DEFINE_KEY . domain_def member_dict RPAREN
    (7) problem -> LPAREN DEFINE_KEY . problem_def domain_def member_dict RPAREN
    (8) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN
    (9) problem_def -> . LPAREN PROBLEM_KEY NAME RPAREN

    LPAREN          shift and go to state 39

    domain_def                     shift and go to state 40
    problem_def                    shift and go to state 41

state 18

    (97) literal -> LPAREN NOT_KEY . predicate RPAREN
    (103) predicate -> . simple_predicate
    (104) predicate -> . LPAREN AND_KEY literals_lst RPAREN
    (105) predicate -> . LPAREN OR_KEY literals_lst RPAREN
    (106) predicate -> . LPAREN EQUALS VARIABLE VARIABLE RPAREN
    (107) predicate -> . LPAREN EQUALS VARIABLE constant RPAREN
    (108) predicate -> . LPAREN EQUALS constant VARIABLE RPAREN
    (109) predicate -> . LPAREN WHEN_KEY when when RPAREN
    (110) predicate -> . LPAREN NAME RPAREN
    (111) predicate -> . LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN literal RPAREN
    (112) predicate -> . NUMBER
    (113) predicate -> . numeric_op
    (101) simple_predicate -> . LPAREN NAME variables_lst RPAREN
    (102) simple_predicate -> . LPAREN NAME RPAREN
    (114) numeric_op -> . LPAREN numberic_op_name simple_predicate simple_predicate RPAREN
    (115) numeric_op -> . LPAREN numberic_op_name simple_predicate NUMBER RPAREN

    LPAREN          shift and go to state 42
    NUMBER          shift and go to state 15

    predicate                      shift and go to state 43
    simple_predicate               shift and go to state 14
    numeric_op                     shift and go to state 16

state 19

    (72) strips_action_def -> LPAREN ACTION_KEY . NAME parameters_def action_def_body RPAREN

    NAME            shift and go to state 44


state 20

    (110) predicate -> LPAREN NAME . RPAREN
    (101) simple_predicate -> LPAREN NAME . variables_lst RPAREN
    (102) simple_predicate -> LPAREN NAME . RPAREN
    (132) variables_lst -> . VARIABLE variables_lst
    (133) variables_lst -> . VARIABLE
    (134) variables_lst -> . NAME variables_lst
    (135) variables_lst -> . NAME

    RPAREN          shift and go to state 45
    VARIABLE        shift and go to state 12
    NAME            shift and go to state 37

    variables_lst                  shift and go to state 46

state 21

    (104) predicate -> LPAREN AND_KEY . literals_lst RPAREN
    (95) literals_lst -> . literal literals_lst
    (96) literals_lst -> . literal
    (97) literal -> . LPAREN NOT_KEY predicate RPAREN
    (98) literal -> . predicate
    (103) predicate -> . simple_predicate
    (104) predicate -> . LPAREN AND_KEY literals_lst RPAREN
    (105) predicate -> . LPAREN OR_KEY literals_lst RPAREN
    (106) predicate -> . LPAREN EQUALS VARIABLE VARIABLE RPAREN
    (107) predicate -> . LPAREN EQUALS VARIABLE constant RPAREN
    (108) predicate -> . LPAREN EQUALS constant VARIABLE RPAREN
    (109) predicate -> . LPAREN WHEN_KEY when when RPAREN
    (110) predicate -> . LPAREN NAME RPAREN
    (111) predicate -> . LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN literal RPAREN
    (112) predicate -> . NUMBER
    (113) predicate -> . numeric_op
    (101) simple_predicate -> . LPAREN NAME variables_lst RPAREN
    (102) simple_predicate -> . LPAREN NAME RPAREN
    (114) numeric_op -> . LPAREN numberic_op_name simple_predicate simple_predicate RPAREN
    (115) numeric_op -> . LPAREN numberic_op_name simple_predicate NUMBER RPAREN

    LPAREN          shift and go to state 47
    NUMBER          shift and go to state 15

    literals_lst                   shift and go to state 48
    literal                        shift and go to state 49
    predicate                      shift and go to state 10
    simple_predicate               shift and go to state 14
    numeric_op                     shift and go to state 16

state 22

    (105) predicate -> LPAREN OR_KEY . literals_lst RPAREN
    (95) literals_lst -> . literal literals_lst
    (96) literals_lst -> . literal
    (97) literal -> . LPAREN NOT_KEY predicate RPAREN
    (98) literal -> . predicate
    (103) predicate -> . simple_predicate
    (104) predicate -> . LPAREN AND_KEY literals_lst RPAREN
    (105) predicate -> . LPAREN OR_KEY literals_lst RPAREN
    (106) predicate -> . LPAREN EQUALS VARIABLE VARIABLE RPAREN
    (107) predicate -> . LPAREN EQUALS VARIABLE constant RPAREN
    (108) predicate -> . LPAREN EQUALS constant VARIABLE RPAREN
    (109) predicate -> . LPAREN WHEN_KEY when when RPAREN
    (110) predicate -> . LPAREN NAME RPAREN
    (111) predicate -> . LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN literal RPAREN
    (112) predicate -> . NUMBER
    (113) predicate -> . numeric_op
    (101) simple_predicate -> . LPAREN NAME variables_lst RPAREN
    (102) simple_predicate -> . LPAREN NAME RPAREN
    (114) numeric_op -> . LPAREN numberic_op_name simple_predicate simple_predicate RPAREN
    (115) numeric_op -> . LPAREN numberic_op_name simple_predicate NUMBER RPAREN

    LPAREN          shift and go to state 47
    NUMBER          shift and go to state 15

    literals_lst                   shift and go to state 50
    literal                        shift and go to state 49
    predicate                      shift and go to state 10
    simple_predicate               shift and go to state 14
    numeric_op                     shift and go to state 16

state 23

    (106) predicate -> LPAREN EQUALS . VARIABLE VARIABLE RPAREN
    (107) predicate -> LPAREN EQUALS . VARIABLE constant RPAREN
    (108) predicate -> LPAREN EQUALS . constant VARIABLE RPAREN
    (123) numberic_op_name -> EQUALS .
    (137) constant -> . NAME

    VARIABLE        shift and go to state 51
    LPAREN          reduce using rule 123 (numberic_op_name -> EQUALS .)
    NAME            shift and go to state 35

    constant                       shift and go to state 52

state 24

    (109) predicate -> LPAREN WHEN_KEY . when when RPAREN
    (99) when -> . LPAREN NAME literals_lst RPAREN
    (100) when -> . literal
    (97) literal -> . LPAREN NOT_KEY predicate RPAREN
    (98) literal -> . predicate
    (103) predicate -> . simple_predicate
    (104) predicate -> . LPAREN AND_KEY literals_lst RPAREN
    (105) predicate -> . LPAREN OR_KEY literals_lst RPAREN
    (106) predicate -> . LPAREN EQUALS VARIABLE VARIABLE RPAREN
    (107) predicate -> . LPAREN EQUALS VARIABLE constant RPAREN
    (108) predicate -> . LPAREN EQUALS constant VARIABLE RPAREN
    (109) predicate -> . LPAREN WHEN_KEY when when RPAREN
    (110) predicate -> . LPAREN NAME RPAREN
    (111) predicate -> . LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN literal RPAREN
    (112) predicate -> . NUMBER
    (113) predicate -> . numeric_op
    (101) simple_predicate -> . LPAREN NAME variables_lst RPAREN
    (102) simple_predicate -> . LPAREN NAME RPAREN
    (114) numeric_op -> . LPAREN numberic_op_name simple_predicate simple_predicate RPAREN
    (115) numeric_op -> . LPAREN numberic_op_name simple_predicate NUMBER RPAREN

    LPAREN          shift and go to state 53
    NUMBER          shift and go to state 15

    when                           shift and go to state 54
    literal                        shift and go to state 55
    predicate                      shift and go to state 10
    simple_predicate               shift and go to state 14
    numeric_op                     shift and go to state 16

state 25

    (111) predicate -> LPAREN FORALL_KEY . LPAREN typed_variables_lst RPAREN literal RPAREN

    LPAREN          shift and go to state 56


state 26

    (114) numeric_op -> LPAREN numberic_op_name . simple_predicate simple_predicate RPAREN
    (115) numeric_op -> LPAREN numberic_op_name . simple_predicate NUMBER RPAREN
    (101) simple_predicate -> . LPAREN NAME variables_lst RPAREN
    (102) simple_predicate -> . LPAREN NAME RPAREN

    LPAREN          shift and go to state 57

    simple_predicate               shift and go to state 58

state 27

    (116) numberic_op_name -> ASSIGN_KEY .

    LPAREN          reduce using rule 116 (numberic_op_name -> ASSIGN_KEY .)


state 28

    (117) numberic_op_name -> INCREASE_KEY .

    LPAREN          reduce using rule 117 (numberic_op_name -> INCREASE_KEY .)


state 29

    (118) numberic_op_name -> DECREASE_KEY .

    LPAREN          reduce using rule 118 (numberic_op_name -> DECREASE_KEY .)


state 30

    (119) numberic_op_name -> LEQ_KEY .

    LPAREN          reduce using rule 119 (numberic_op_name -> LEQ_KEY .)


state 31

    (120) numberic_op_name -> GEQ_KEY .

    LPAREN          reduce using rule 120 (numberic_op_name -> GEQ_KEY .)


state 32

    (121) numberic_op_name -> PLUS_KEY .

    LPAREN          reduce using rule 121 (numberic_op_name -> PLUS_KEY .)


state 33

    (122) numberic_op_name -> MINUS_KEY .

    LPAREN          reduce using rule 122 (numberic_op_name -> MINUS_KEY .)


state 34

    (130) constants_lst -> constant constants_lst .

    $end            reduce using rule 130 (constants_lst -> constant constants_lst .)
    HYPHEN          reduce using rule 130 (constants_lst -> constant constants_lst .)
    RPAREN          reduce using rule 130 (constants_lst -> constant constants_lst .)


state 35

    (137) constant -> NAME .

    NAME            reduce using rule 137 (constant -> NAME .)
    $end            reduce using rule 137 (constant -> NAME .)
    HYPHEN          reduce using rule 137 (constant -> NAME .)
    RPAREN          reduce using rule 137 (constant -> NAME .)
    VARIABLE        reduce using rule 137 (constant -> NAME .)


state 36

    (132) variables_lst -> VARIABLE variables_lst .

    $end            reduce using rule 132 (variables_lst -> VARIABLE variables_lst .)
    RPAREN          reduce using rule 132 (variables_lst -> VARIABLE variables_lst .)
    HYPHEN          reduce using rule 132 (variables_lst -> VARIABLE variables_lst .)


state 37

    (134) variables_lst -> NAME . variables_lst
    (135) variables_lst -> NAME .
    (132) variables_lst -> . VARIABLE variables_lst
    (133) variables_lst -> . VARIABLE
    (134) variables_lst -> . NAME variables_lst
    (135) variables_lst -> . NAME

    $end            reduce using rule 135 (variables_lst -> NAME .)
    RPAREN          reduce using rule 135 (variables_lst -> NAME .)
    HYPHEN          reduce using rule 135 (variables_lst -> NAME .)
    VARIABLE        shift and go to state 12
    NAME            shift and go to state 37

    variables_lst                  shift and go to state 38

state 38

    (134) variables_lst -> NAME variables_lst .

    $end            reduce using rule 134 (variables_lst -> NAME variables_lst .)
    RPAREN          reduce using rule 134 (variables_lst -> NAME variables_lst .)
    HYPHEN          reduce using rule 134 (variables_lst -> NAME variables_lst .)


state 39

    (8) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN
    (9) problem_def -> LPAREN . PROBLEM_KEY NAME RPAREN

    DOMAIN_KEY      shift and go to state 59
    PROBLEM_KEY     shift and go to state 60


state 40
